# biotools_agent

./: .gitignore  AGENT_MIGRATION_GUIDE.md  README.md  env.example  pyproject.toml
.claude/agents/: biotools-analyzer.md  deployment-expert.md  security-auditor.md
.github/workflows/: batch-analysis.yml  biotools-analysis.yml
biotools_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/: url.csv
database/: create_analysis_results_table.sql
docs/: API_CALL_EXAMPLE.md  ARCHITECTURE_ANALYSIS_DESIGN.md  BIOTOOLS_AGENT_INTEGRATION_PLAN.md  CLAUDE_CODE_SDK_GUIDE.md  DATABASE_UPDATE.md  GITHUB_ACTIONS_GUIDE.md  Hello-World_analysis.html  Hello-World_analysis.json  Hello-World_analysis.md  HiTE_analysis.html  HiTE_analysis.json  HiTE_analysis.md  MVP_QUALITY_ASSESSMENT.md  NEW_FEATURES.md  RESULT_FEEDBACK.md  biomartr_analysis.json  biotools_agent_pr.md  minimap2_analysis.md  picard_analysis.md  supabase.md  yahs_analysis.html  yahs_analysis.json  yahs_analysis.md
docs/do/: 2025-08-12-21-29.md  2025-08-12-22-11.md
src/: __init__.py  agent_analyzer.py  agent_definitions.py  agent_models.py  agent_validator.py  ai_analyzer.py  ai_analyzer_adapter.py  config.py  github_analyzer.py  llm_client.py  main.py  main.py.bak  models.py  monitoring_config.py  security_analyzer.py  supabase_client.py  visualizer.py
test_output/: picard_analysis.json
test_results/: COMPREHENSIVE_TEST_SUMMARY.md
test_results/hite/: HiTE_analysis.html  HiTE_analysis.json  HiTE_analysis.md
test_results/yahs/: yahs_analysis.html  yahs_analysis.json  yahs_analysis.md
tests/: test_basic.py
